--- a/app/src/main/res/values/colours.xml
+++ b/app/src/main/res/values/colours.xml
@@ -18,6 +18,7 @@
     <color name="Light_Blue">#94bee5</color>
 
     <color name="Light_Accent">#00B0FF</color>
+    <color name="Red_Accent">#FF1744</color>
 
     <color name="Background_colour">#ffe0e0e0</color>
 
