--- a/app/src/main/res/layout/activity_fast_details.xml
+++ b/app/src/main/res/layout/activity_fast_details.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="It was projected to last for 16 hours ending at 16:00 on Wednesday 10th June 2015."
-            android:id="@+id/textView10"
+            android:id="@+id/text_block_2"
             android:layout_below="@+id/text_block_1"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -63,8 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="You achieved 14 hours and 23 minutes for 78% completion."
-            android:id="@+id/textView11"
-            android:layout_below="@+id/textView10"
+            android:id="@+id/text_block_3"
+            android:layout_below="@+id/text_block_2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginRight="8dp"
